<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="dev.akat.smartmeter.ui.SplashFragment"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_accountListFragment"
            app:destination="@id/accountListFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="dev.akat.smartmeter.ui.login.LoginFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_accountListFragment"
            app:destination="@id/accountListFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="dev.akat.smartmeter.ui.register.RegisterFragment"
        android:label="@string/registration"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_accountListFragment"
            app:destination="@id/accountListFragment"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/accountListFragment"
        android:name="dev.akat.smartmeter.ui.accountList.AccountListFragment"
        android:label="@string/account_list"
        tools:layout="@layout/fragment_account_list">
        <action
            android:id="@+id/action_accountListFragment_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/accountListFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_accountListFragment_to_accountInfoFragment"
            app:destination="@id/accountInfoFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
        <action
            android:id="@+id/action_accountListFragment_to_queryListFragment"
            app:destination="@id/queryListFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
    </fragment>
    <fragment
        android:id="@+id/companyListFragment"
        android:name="dev.akat.smartmeter.ui.companyList.CompanyListFragment"
        android:label="@string/select_company"
        tools:layout="@layout/fragment_company_list">
        <action
            android:id="@+id/action_companyListFragment_to_queryListFragment"
            app:destination="@id/queryListFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/companyListFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/accountInfoFragment"
        android:name="dev.akat.smartmeter.ui.accountInfo.AccountInfoFragment"
        android:label="@string/account_info"
        tools:layout="@layout/fragment_account_info">
        <argument
            android:name="accountId"
            android:defaultValue="-1L"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/queryListFragment"
        android:name="dev.akat.smartmeter.ui.queryList.QueryListFragment"
        android:label="@string/queries"
        tools:layout="@layout/fragment_query_list">
        <action
            android:id="@+id/action_queryListFragment_to_companyListFragment"
            app:destination="@id/companyListFragment"
            app:popUpToInclusive="false"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
    </fragment>
</navigation>